# DiffSynth-Studio

./: .cursorignore  .gitignore  create_lip_masks.py  data  dataset  extract_lip_masks.ipynb  filter_masks.ipynb  finetune.ipynb  inspect_latents.ipynb  inspect_videos.ipynb  main.py  pyproject.toml  setup.sh  train_wan_t2v.py  video_dataset.py  visualize_finetuned_results.ipynb
diffsynth.egg-info/: PKG-INFO  SOURCES.txt
diffsynth/pipelines/: wan_video.py
examples/wanvideo/: train_wan_t2v.py
lip_sync_model/: model.py
models/lightning_logs/version_2/: metrics.csv
models/lip_finetuned/lightning_logs/version_19/: metrics.csv
models/lip_finetuned/lightning_logs/version_20/: metrics.csv
models/lip_finetuned/lightning_logs/version_36/: metrics.csv
