[project]
name = "diffsynth-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "controlnet-aux==0.0.7",
    "cupy-cuda12x>=13.4.1",
    "datasets>=3.5.0",
    "diffsynth>=1.1.7",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "gdown>=5.2.0",
    "huggingface-hub[cli]>=0.30.2",
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "lightning>=2.5.1",
    "mediapipe==0.10.21",
    "modelscope>=1.25.0",
    "numpy>=1.22",
    "peft>=0.15.2",
    "protobuf==4.25.3",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0",
    "torchvision>=0.22.0",
    "transformers==4.46.2",
]
